fix(pets in zoo): correct a bug with invisible arrows

--- a/online-zoo/scss/style.scss
+++ b/online-zoo/scss/style.scss
@@ -437,7 +437,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
+    @media (max-width: 1024px) {
+      overflow: hidden;
+    }
   }
 
   &__slider {
